fix nas reboot and close opend sessions

--- a/mods-config/sql/main/mysql/queries.conf
+++ b/mods-config/sql/main/mysql/queries.conf
@@ -157,6 +157,7 @@ accounting {
 					acctinterval    = ${....event_timestamp_epoch} - \
 						UNIX_TIMESTAMP(@acctupdatetime_old), \
 					framedipaddress = '%{Framed-IP-Address}', \
+					acctstoptime = NULL , \
 					uptime = %{%{Acct-Session-Time}:-NULL}, \
 					upload = '%{%{Acct-Input-Gigawords}:-0}' \
 						<< 32 | '%{%{Acct-Input-Octets}:-0}', \
