--- a/mods-config/sql/main/mysql/queries.conf
+++ b/mods-config/sql/main/mysql/queries.conf
@@ -17,7 +17,8 @@ sql_user_name = "%{User-Name}"
 # request reception time recorded by this server, for example if you
 # distrust the provided Event-Timestamp.
 # set time from server linux
-#event_timestamp_epoch = "%l"
+# to depend on server date not nas date
+event_timestamp_epoch = "%l"
 
 event_timestamp_epoch = "%{%{integer:Event-Timestamp}:-%l}"
 
