--- a/mods-config/sql/main/mysql/queries.conf
+++ b/mods-config/sql/main/mysql/queries.conf
@@ -92,6 +92,7 @@ accounting {
 						- UNIX_TIMESTAMP(acctstarttime), \
 					acctterminatecause = '%{%{Acct-Terminate-Cause}:-NAS-Reboot}' \
 				WHERE acctstoptime IS NULL \
+				AND nas_serial= '%{NAS-Identifier}' \
 				AND acctstarttime <= ${....event_timestamp}"
 		}
 
