add class attribute

--- a/mods-config/sql/main/mysql/queries.conf
+++ b/mods-config/sql/main/mysql/queries.conf
@@ -26,7 +26,24 @@ event_timestamp_epoch = "%{%{integer:Event-Timestamp}:-%l}"
 # to an SQL date.
 
 event_timestamp = "FROM_UNIXTIME(${event_timestamp_epoch})"
-
+####################################################################
+class {
+	#
+	#  Delete the '#' character from each of the configuration
+	#  items in this section.  This change puts the Class
+	#  attribute into the various tables.  Leave the double-quoted
+	#  string there, as the value for the configuration item.
+	#
+	#  See also policy.d/accounting, and the "insert_acct_class"
+	#  policy.  You will need to list (or uncomment)
+	#  "insert_acct_class" in the "post-auth" section in order to
+	#  create a Class attribute.
+	#
+	column_name =	 ", class"
+	packet_xlat =	 ", '%{Class}'"
+	reply_xlat =	 ", '%{reply:Class}'"
+}
+#######################################################################
 #######################################################################
 # Default profile
 #######################################################################
@@ -77,7 +94,7 @@ accounting {
 		acctstoptime,     	uptime, upload, \
 		download,	        macaddress, \
 		acctterminatecause, \
-		framedipaddress,user_id,userable_type"
+		framedipaddress,user_id,userable_type ${..class.column_name}"
 
 	type {
 		accounting-on {
@@ -131,7 +148,8 @@ accounting {
 					'', \
 					'%{Framed-IP-Address}', \
 					'%{reply:User-Id}', \
-					'%{reply:Userable-Type}')"
+					'%{reply:Userable-Type}' \
+					${....class.packet_xlat})"
 
 			#
 			#  Key constraints prevented us from inserting a new session,
@@ -190,7 +208,8 @@ accounting {
 					'', \
 					'%{Framed-IP-Address}', \
 					'%{reply:User-Id}', \
-					'%{reply:Userable-Type}')"
+					'%{reply:Userable-Type}' \
+					${....class.packet_xlat})"
 		}
 
 		stop {
@@ -231,7 +250,8 @@ accounting {
 					'%{Acct-Terminate-Cause}', \
 					'%{Framed-IP-Address}', \
 					'%{reply:User-Id}', \
-					'%{reply:Userable-Type}')"
+					'%{reply:Userable-Type}' \
+					${....class.packet_xlat})"
 
 		}
 
