remove delete key from redis in defualt

--- a/radiusd.conf
+++ b/radiusd.conf
@@ -309,7 +309,7 @@ log {
 	#  The command-line option "-X" over-rides this option, and forces
 	#  logging to go to stdout.
 	#
-	destination = files
+	#destination = files
 
 	#
 	#  Highlight important messages sent to stderr and stdout.
@@ -317,7 +317,7 @@ log {
 	#  Option will be ignored (disabled) if output if TERM is not
 	#  an xterm or output is not to a TTY.
 	#
-	colourise = yes
+	#colourise = yes
 
 	#
 	#  The logging messages for the server are appended to the
@@ -656,7 +656,7 @@ $INCLUDE clients.conf
 thread pool {
 	#  Number of servers to start initially --- should be a reasonable
 	#  ballpark figure.
-	start_servers = 5
+	start_servers = 10
 
 	#  Limit on the total number of servers running.
 	#
